# htmlang

./: CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  playground.yml  release.yml
crates/htmlang-core/: Cargo.toml
crates/htmlang-core/src/: ast.rs  codegen.rs  codegen_tests.rs  lib.rs  parser.rs
crates/htmlang-wasm/: Cargo.toml
crates/htmlang-wasm/src/: lib.rs
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/snippets/: htmlang.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: htmlang.tmLanguage.json
examples/: blog.hl  blog.html.map  demo.hl  demo.html  demo.html.map  docs.hl  docs.html.map  landing.hl  landing.html.map
src/: ast.rs  cli.rs  codegen.rs  convert.rs  fmt.rs  lib.rs  main.rs  parser.rs  playground_default.hl  serve.rs
tests/: snapshots.rs
tests/snapshots/: accessibility.hl  alignment.hl  anchor_positioning.hl  animate_shorthand.hl  animations.hl  arithmetic.hl  assert_directive.hl  attributes.hl  basic_elements.hl  breadcrumb.hl  chain_operator.hl  clamp_css.hl  color_scheme.hl  compat_test.hl  computed_let.hl  conditionals.hl  container_queries.hl  convert_basic.hl  css_property.hl  css_shorthands.hl  css_units.hl  css_vars.hl  dark_mode.hl  data_directive.hl  direction_attr.hl  each_destructuring.hl  each_else.hl  each_index.hl  each_range.hl  each_step.hl  else_if.hl  env_directive.hl  extra_css.hl  fn_defaults.hl  form_elements.hl  fragment.hl  functions.hl  grid_areas.hl  has_pseudo.hl  hidden_attr.hl  (+64 more)
