[workspace]
members = [".", "crates/htmlang-core", "crates/htmlang-wasm"]

[package]
name = "htmlang"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "htmlang-lsp"
path = "src/bin/htmlang_lsp/main.rs"

[dependencies]
htmlang-core = { path = "crates/htmlang-core" }
notify = "7"
rustls-pemfile = "2.2.0"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26.4", features = ["ring"] }
tower-lsp = "0.20"

[profile.release]
opt-level = "s"
lto = true
strip = true
